# cochinillos-voladores

./: .gitignore  README.md
codigo/cochinillos-voladores/: .env  Caddyfile  Cargo.toml  Dockerfile  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml
codigo/cochinillos-voladores/.sqlx/: query-2ba1da6686e08e71ec5344561ce25bf2817cd7f0a73803af67223b87e7880855.json  query-31a0fc825a418bdff7a3cc5ce284ca60232e7b52e8737fda2f9b1a6a2a05d8a2.json  query-36b1b0441a093455a0e3e0434e2ae3b8617f84b2d5f83a3179a5c60137d52a22.json  query-4033f08190ee4942386fc84505d3788ea1ea5572030eb0297dcd5d7d2d2cf7d2.json  query-4068f2f6c96d3763959563818dd10aed0440168c716199aa4f43fe1eda3b9a4d.json  query-43679ed70028df5d624ad7527021615e5db4022e748e1c7f5be1a5ea2c46eb98.json  query-460cac234e4584be856f2ad47e8f55c16b51781a74bbabd5599121c985ae885d.json  query-4da3e19a8f875e1c03c2e11ccfdb981feb3361c9dbc11e3e4635335f155aa2b1.json  query-5a878862d299db083a41dbb6ca64647b5b8a592e64e0b666e1a730b37a0ead8f.json  query-5aa4ab0491b9bceab27502e0e036e800a330c1fd21c466ac272cb6d04af4b6dd.json  query-653df208caebe1409516ab68373e386008830972926209214c9c84734b1f26e7.json  query-69a89f4960256cea7df474585256204fd31a44ca8fe82cea02a9319c8deaa537.json  query-725279996fdb31d0a3d1df4a12d66f8427d4192a05a99a5ab17bf8a518094a72.json  query-72fb2dc3bf162283157db33a578ad3e1c418fc8f41ce47e5df5d8061ad3a874b.json  query-7389db6eb3db1b2a88fc6eb03257bec1138b3a36005ecdbff5a50a8eebcf62fb.json  query-7907e229a29d620fc358ca8ca46aa1cdc8c326d2a6ded088df4c3d20fdc01380.json  query-7d316c9446c7d6345b1eb142dea51c7fb7e1a4056c0bbac2450ff35be4be2220.json  (+16 more)
codigo/cochinillos-voladores/src/: ctx.rs  (+6 more)
(+94 files in other folders)
