[package]
name = "cochinillos-voladores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
dotenvy = "0.15.7"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1.37.0", features = ["full"] }
