[package]
name = "cochinillos-voladores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["macros"] }
dotenvy = "0.15.7"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_with = "3.8"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "mysql", "time", "uuid"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"
derive_more = { version = "0.99.17", features = ["from"] }
uuid = { version = "1", features = ["v4", "v7", "fast-rng"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
lazy-regex = "3"
async-trait = "0.1"
strum_macros = "0.26"
axum-htmx = "0.5"

[dev-dependencies]
anyhow = "1"
tower = { version = "0.4", features = ["util"] } 
axum-macros = "0.4"
